--- a/src/Makefile
+++ b/src/Makefile
@@ -1,16 +1,17 @@
 CC = gcc
 
-CFLAGS = -Wall -Wextra -std=c99 -O2
+CFLAGS = -Wall -Wextra -std=c99 -O2 --pedantic-errors
 SRC = main.c sudoku.c
 
 OBJ = $(SRC:.c=.o)
-
+PRG= sudoku_solver
 all : main
 
-main: $(OBJ)
+main: $(OBJ) 
+	$(CC) $(CFLAGS) $(OBJ) -o $(PRG)
 
 .PHONY: clean
 clean:
 	${RM} ${OBJ}   # remove object files
 	${RM} ${DEP}   # remove dependency files
-	${RM} main     # remove main program
+	${RM} ${PRG}     # remove main program
